
Fixed: Issue #441: Incomplete logging of restart action.

Fixed: Issue #444: generic protocol test: "expect" truncated reveived data by one character for each
zero, which was received.

Fixed: Issue #460: Add support for OpenSSL 1.1.0

Fixed: Issue #467: Testing unix sockets of UDP type didn't work.

Fixed: Network check on Solaris 10.

Fixed: Monit GUI: Set the encoding to UTF-8 to support UTF-8 formatted "check program" output.

Fixed: If the check program monitoring was disabled by exit status dependent stop/unmonitor action,
don't start the program again.


Version 5.19.0

New: Issue #421: Monit HTTP GUI: support for IPv6 added.

New: Monit HTTP GUI: it is now possible to listen both on TCP and unix sockets (previously it was
mutually exclusive).

New: Issue #380: apache-status protocol test: Added support for 'username' and 'password' options for
Basic authentication. Example:
 if failed port 80 protocol apache-status username myuser password 123456
        loglimit > 10% or
        dnslimit > 50%
 then alert

New: Add support for Basic authentication to the HTTP protocol test. Example:
 if failed port 80 protocol http username myuser password 123456 then alert

Fixed: apache-status protocol test: If the server returned an error (for example because authetication
is required and no credentials were set), provide the error code rather then confusing error message
"no scoreboard found".

Fixed: Issue #379: A linux system with lots of interrupts may disable process and system resource
checks.

Fixed: Issue #388: The service-local alert settings didn't override global "set alert" for the same
recipient properly.

Fixed: Issue #393: The $HOST in mail alert may be incorrect if FQDN hostname cannot be found.

Fixed: Issue #396: Disable CLI colors if the output is not tty.

Fixed: Issue #400: Clarify network tests documentation.

Fixed: Issue #403: If the sender address for monit alert was overriden by "set mail-format" statement,